# gloria127

./: README.md  after_refactoring.cpp
241010_first_app/: sortirovka_shella2.cpp
241015_homework1/: after_refactoring.cpp  after_refactoring2.cpp  before_refactoring.cpp  build_run.bat  build_run_after.bat  build_run_before.bat
241217_homework3/: build_run.bat  dz_3.cpp  main.cpp  menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp
250215_cmake_prj/: CMakeLists.txt  build_run.bat
250215_cmake_prj/project/: CMakeLists.txt
250215_cmake_prj/project/obuchaika/: CMakelists.txt
250215_cmake_prj/project/sorting/: CMakeLists.txt
250215_cmake_prj/project/sorting/src/: CMakeLists.txt  bubble_sort.cpp
250215_cmake_prj/project/sorting/test/: CMakeLists.txt
250215_cmake_prj/project_root/: CMakeLists.txt
250215_cmake_prj/project_root/sorting/: CMakeLists.txt
250215_cmake_prj/projects/: CMakeLists.txt
250215_cmake_prj/projects/obuchaika/: CMakelists.txt
250215_cmake_prj/projects/sorting/: CMakeLists.txt
250215_cmake_prj/projects/sorting/src/: CMakeLists.txt  bubble_sort.hpp
250215_cmake_prj/projects/sorting/test/: CMakeLists.txt  test_bubble.cpp
250425_vector_list/projects/: CMakeLists.txt  build_run.bat  doubly_linked_list.cpp  doubly_linked_list.hpp  doubly_linked_list_tests.cpp  templates_list.cpp  templates_vector.cpp  vector.cpp  vector.hpp  vector_tests.cpp
homework3/: dz_3.cpp
